--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
           <input type='radio' name='options' id='inspectTool' autocomplete='off' > Inspect
         </label>
         <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions:not(.in)'>
-          <input type='radio' name='options' id='digTool' autocomplete='off' > Dig
+          <input type='radio' name='options' id='digTool' autocomplete='off' > Swing
         </label>
         <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions:not(.in)'>
           <input type='radio' name='options' id='placeTool' autocomplete='off' > Place
