--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,13 +53,13 @@
       </div>
       <br>
       <div class='digToolOptions collapse'>
-        X: <input type='number' id='selectStartX'>
-        Y: <input type='number' id='selectStartY'>
-        Z: <input type='number' id='selectStartZ'>
+        X: <input type='number' id='selectStartX' class='coordinateInput'>
+        Y: <input type='number' id='selectStartY' class='coordinateInput'>
+        Z: <input type='number' id='selectStartZ' class='coordinateInput'>
         <br>
-        X: <input type='number' id='selectEndX'>
-        Y: <input type='number' id='selectEndY'>
-        Z: <input type='number' id='selectEndZ'>
+        X: <input type='number' id='selectEndX' class='coordinateInput'>
+        Y: <input type='number' id='selectEndY' class='coordinateInput'>
+        Z: <input type='number' id='selectEndZ' class='coordinateInput'>
       </div>
       <div class='input-group'>
         <select class='selectpicker' data-live-search='true' id='craftSelect' title='Craft something!'></select>
