--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,13 +53,13 @@
       </div>
       <br>
       <div class='digToolOptions collapse'>
-        X: <input type='number' id='selectStartX' class='coordinateInput'>
-        Y: <input type='number' id='selectStartY' class='coordinateInput'>
-        Z: <input type='number' id='selectStartZ' class='coordinateInput'>
+        <input type='number' id='selectStartX' class='coordinateInput' placeholder='X'>
+        <input type='number' id='selectStartY' class='coordinateInput' placeholder='Y'>
+        <input type='number' id='selectStartZ' class='coordinateInput' placeholder='Z'>
         <br>
-        X: <input type='number' id='selectEndX' class='coordinateInput'>
-        Y: <input type='number' id='selectEndY' class='coordinateInput'>
-        Z: <input type='number' id='selectEndZ' class='coordinateInput'>
+        <input type='number' id='selectEndX' class='coordinateInput' placeholder='X'>
+        <input type='number' id='selectEndY' class='coordinateInput' placeholder='Y'>
+        <input type='number' id='selectEndZ' class='coordinateInput' placeholder='Z'>
       </div>
       <div class='input-group'>
         <select class='selectpicker' data-live-search='true' id='craftSelect' title='Craft something!'></select>
