making inventory code easier to work with the goal is to allow inventories to be updated one slot at a time, because doing it all at once was too much data for the robots to write at  once

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,6 +91,7 @@
 
     <script type='text/javascript' src='/js/fetchPromise.js'></script>
     <script type='text/javascript' src='/js/recipeSearch.js'></script>
+    <script type='text/javascript' src='/js/Inventory.js'></script>
     <script type='text/javascript' src='/js/interface.js'></script>
 		<script src='/js/buttons.js'></script>
 
