added point helper class

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,6 +84,7 @@
 		<script src='/js/lib/PointerLockControls.js'></script>
     <script src='/js/lib/socket.io.js'></script>
 
+		<script src='/js/WorldAndScenePoint.js'></script>
 		<script src='/js/VoxelMap.js'></script>
 		<script src='/js/CoordForm.js'></script>
 		<script src='/js/CutawayForm.js'></script>
