--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,6 +85,7 @@
     <script src='/js/lib/socket.io.js'></script>
 
 		<script src='/js/WorldAndScenePoint.js'></script>
+		<script src='/js/Robot.js'></script>
 		<script src='/js/VoxelMap.js'></script>
 		<script src='/js/CoordForm.js'></script>
 		<script src='/js/CutawayForm.js'></script>
