combined a few buttons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         <input type='text' id='commandInput'></input><br>
         <input type='checkbox' id='runInTerminal'></input>Run in Terminal
       </div>
-      <div id='inventoryContainer'></div>
+      <div id='inventoryContainer' class='hidden'></div>
     </div>
 
     <div id='buttonContainer'>
@@ -24,7 +24,7 @@
       <br>
       <div>
         Scan Level:
-        <select id='scanWhileMoving'>
+        <select id='scanLevelSelect'>
           <option value='0'>None</option>
           <option value='1' selected>Small</option>
           <option value='2'>Big</option>
