finally got the buttons looking nice in a bootstrap grid

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,36 +56,38 @@
         </div>
       </div>
 
-      <div class='row' data-toggle='buttons'>
-        
-        <div class="col-xs-4">
-          <label class='btn btn-primary btn-xs active' data-toggle='collapse' data-target='.digToolOptions.in'>
-            <input type='radio' name='options' id='moveTool' autocomplete='off' checked> Move
-          </label>
-        </div>
-        
-        <div class="col-xs-4">
-          <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions.in'>
-            <input type='radio' name='options' id='interactTool' autocomplete='off' > Interact
-          </label>
-        </div>
-        
-        <div class="col-xs-4">
-          <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions.in'>
-            <input type='radio' name='options' id='inspectTool' autocomplete='off' > Inspect
-          </label>
-        </div>
+      <div class='row'>
 
-        <div class="col-xs-6">
-          <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions:not(.in)'>
-            <input type='radio' name='options' id='digTool' autocomplete='off' > Swing
-          </label>
-        </div>
-        
-        <div class="col-xs-6">
-          <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions:not(.in)'>
-            <input type='radio' name='options' id='placeTool' autocomplete='off' > Place
-          </label>
+        <div class='col-xs-12' data-toggle='buttons'>
+          
+          <div class="btn-group btn-group-justified">
+
+            <label class='btn btn-primary btn-xs active' data-toggle='collapse' data-target='.digToolOptions.in'>
+              <input type='radio' name='options' id='moveTool' autocomplete='off' checked> Move
+            </label>
+          
+            <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions.in'>
+              <input type='radio' name='options' id='interactTool' autocomplete='off' > Interact
+            </label>
+          
+            <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions.in'>
+              <input type='radio' name='options' id='inspectTool' autocomplete='off' > Inspect
+            </label>
+
+          </div>
+
+          <div class="btn-group btn-group-justified">
+            
+            <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions:not(.in)'>
+              <input type='radio' name='options' id='digTool' autocomplete='off' > Swing
+            </label>
+          
+            <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions:not(.in)'>
+              <input type='radio' name='options' id='placeTool' autocomplete='off' > Place
+            </label>
+
+          </div>
+
         </div>
 
       </div>
