--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,15 +32,6 @@
       <div id='inventoryContainer' class='hidden'></div>
     </div>
 
-    <div id='bottomRightUI'>
-      <div id='messageContainer'></div>
-      <br>
-      <br>
-      <input type='text' id='commandInput'></input>
-      <br>
-      <input type='checkbox' id='runInTerminal'></input>Run in Terminal
-    </div>
-
     <div id='buttonContainer' class='container'>
 
       <div class='row'>
@@ -205,6 +196,25 @@
         </div>
       </div>
 
+      <br>
+
+      <div class='row'>
+        <div class='col-xs-12'>
+
+          <input type='text' id='commandInput'></input>
+          <br>
+          <input type='checkbox' id='runInTerminal'></input>Run in Terminal
+
+        </div>
+      </div>
+
+      <div class='row'>
+        <div class='col-xs-12'>
+
+          <div id='messageContainer'></div>
+         
+        </div>
+      </div>
 
     </div>
 
