--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,13 +44,15 @@ body {
 
 #messageContainer {
   overflow-y: scroll;
+  width: 100%;
 }
 
 #buttonContainer {
   position: absolute;
-  right: 0%;
+  right: 1%;
   top: 1%;
-  width:300px;
+  width:270px;
+  height: 98vh;
 }
 
 #topLeftUI {
@@ -96,4 +98,18 @@ body {
 
 .hidden {
   display: none;
+}
+
+.flex-row {
+  display: flex;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.flex-item {
+  min-width: 0;
 }
